Possibility to hide blockholder; Overflow / scroll problems in sidebars / blockholder fixed

--- a/modules/cmsadmin/assets/scss/components/_blockholder.scss
+++ b/modules/cmsadmin/assets/scss/components/_blockholder.scss
@@ -2,14 +2,11 @@
 	background-color: #4E4E4E;
 	padding: 20px 10px;
 	height: 100%;
+	overflow: auto;
 }
 
 .blockholder__group {
-	margin-top: 10px;
-
-	&:first-of-type {
-		margin-top: 0;
-	}
+	margin-bottom: 20px;
 }
 
 .blockholder__group-title {
@@ -26,7 +23,6 @@
 .blockholder__block {
 	font-size: 14px;
 	line-height: 20px;
-	background-color: #4E4E4E;
 	cursor: move;
 	display: inline-block;
 	color: rgba($white, 0.5);
@@ -38,7 +34,6 @@
 	width: 100%;
 	text-align: left;
 	margin-bottom: 10px;
-	z-index: 100000;
 
 	&:hover {
 		box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
